fix: payments: search placeholder, spaces between buttons, columns aligning

--- a/scss/pages/payables.scss
+++ b/scss/pages/payables.scss
@@ -32,6 +32,8 @@
     &.is-first {
       @media (min-width: $screen-xs-min) {
         width: $first-column-width;
+        float: left;
+        margin-right: $margin-xs;
 
         &.mod-small {
           width: $first-column-width--small;
@@ -41,10 +43,10 @@
 
     &.is-last {
       @media (min-width: $screen-xs-min) {
-        width: calc(100% - #{$first-column-width + $content-filter-padding});
+        width: calc(100% - #{$first-column-width + $margin-xs});
 
         &.mod-small {
-          width: calc(100% - #{$first-column-width--small + $content-filter-padding});
+          width: calc(100% - #{$first-column-width--small + $margin-xs});
         }
       }
       @media (max-width: $screen-xxs-max) {
