--- a/scss/project/components/_content-filter.scss
+++ b/scss/project/components/_content-filter.scss
@@ -30,19 +30,16 @@
     padding: 3px 15px 4px 10px;
   }
 
-  .week-dropdown,
-  .dropdown-menu {
-    width: 160px !important;
-  }
-
   .week-dropdown {
+    width: 160px !important;
+
     @media (max-width: $screen-xs-max) {
       width: 140px !important;
     }
   }
 
-  .day-dropdown{
-      width: 120px !important;
+  .day-dropdown {
+    width: 120px !important;
   }
 }
 
